--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "A micro-site and repo to manage automated accessibility reports, generated scans, and general compliance with WCAG 2.2 AA across Digital Service managed websites and tools.",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "pa11y-ci",
+    "start": "npx @11ty/eleventy --serve",
+    "build": "npx @11ty/eleventy"
   },
   "keywords": [],
   "author": "",
