--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "test": "pa11y-ci",
     "start": "npx @11ty/eleventy --serve",
-    "build": "npx @11ty/eleventy"
+    "build": "npx @11ty/eleventy",
+    "lighthouse":"npx lighthouse ${url} --chrome-flags='--ignore-certificate-errors' --only-categories accessibility, best-practices, seo"
   },
   "keywords": [],
   "author": "",
