--- a/package.json
+++ b/package.json
@@ -4,10 +4,11 @@
   "description": "A micro-site and repo to manage automated accessibility reports, generated scans, and general compliance with WCAG 2.2 AA across Digital Service managed websites and tools.",
   "main": "index.js",
   "scripts": {
-    "test": "pa11y-ci",
+    "pa11y": "pa11y-ci",
     "start": "npx @11ty/eleventy --serve",
     "build": "npx @11ty/eleventy",
-    "lighthouse":"npx lighthouse --chrome-flags='--ignore-certificate-errors' --only-categories accessibility, best-practices, seo -- "
+    "lighthouse-acsf-mobile": "npx lighthouse --chrome-flags='--ignore-certificate-errors'  --only-categories accessibility, best-practices, seo -- ",
+    "lighthouse-acsf-desktop": "npx lighthouse --chrome-flags='--ignore-certificate-errors' --preset=desktop  --only-categories accessibility, best-practices, seo -- "
   },
   "keywords": [],
   "author": "",
@@ -15,6 +16,7 @@
   "dependencies": {
     "@11ty/eleventy": "^2.0.1",
     "lighthouse": "^12.6.1",
-    "pa11y": "^9.0.0"
+    "pa11y-ci": "^3.1.0",
+    "pa11y-ci-reporter-html": "^7.0.0"
   }
 }
